syntax = "proto3";

option go_package = "n0st.ac/n0stack/iam/v1alpha;piam";

package n0stack.iam.v1alpha;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "n0stack";
    contact: {
      name: "n0stack";
      url: "https://github.com/n0stack/n0stack";
    }
  }
  
  schemes: HTTPS;
  // schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};


message User {
  // Name is a unique field.
  string name = 1;

  // Annotations can store metadata used by the system for control.
  // In particular, implementation-dependent fields that can not be set as protobuf fields are targeted.
  // The control specified by n0stack may delete metadata specified by the user.
  map<string, string> annotations = 3;

  // Labels stores user-defined metadata.
  // The n0stack system must not rewrite this value.
  map<string, string> labels = 4;

  string display_name = 9;

  map<string, string> public_keys = 33;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/iam/v1alpha/users"
      body: "user"
    };
  }

  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/iam/v1alpha/users/{name}"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/api/iam/v1alpha/users/{user.name}"
      body: "user"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/iam/v1alpha/users/{name}"
    };
  }
}


message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  string name = 1;
}

message UpdateUserRequest {
  User user = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteUserRequest {
  string name = 1;
}
